# riot-pulse

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  config.yaml.example  main.py  playground.py  pyproject.toml  riot_social_listener.py
.github/workflows/: ci.yml
riot_pulse/: __init__.py  __main__.py  cli.py  config.py
riot_pulse/agents/: __init__.py  social_listener.py
riot_pulse/analyzers/: __init__.py  base.py  crisis.py  esports.py  meta.py  patches.py  sentiment.py  trending.py
riot_pulse/llm/: __init__.py  base.py  config.py  providers.py  testing.py
riot_pulse/llm/adapters/: __init__.py  anthropic.py  litellm.py  openai.py  perplexity.py  xai.py
riot_pulse/reporting/: __init__.py  formatters.py  generator.py
riot_pulse/utils/: __init__.py  logging.py  query_enhancer.py  sources.py
scripts/: dev.py
specifications/: 001-llm-provider-abstraction.md  002-python-development-standards.md  TEMPLATE.md
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py
tests/unit/llm/: __init__.py  test_base.py  test_providers.py
