[project]
name = "riot-pulse"
version = "0.1.0"
description = "AI-powered social listening for Riot Games communities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.7",
    "duckduckgo-search>=8.1.1",
    "fastapi[standard]>=0.116.1",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "sqlalchemy>=2.0.42",
    "yfinance>=0.2.65",
    "python-dotenv>=1.0.0",
]

[project.scripts]
riot-pulse = "riot_pulse.cli:main"
