[project]
name = "riot-pulse"
version = "0.1.0"
description = "AI-powered social listening for Riot Games communities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.7",
    "python-dotenv>=1.0.0",
    "openai>=1.98.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0.0",
    "litellm>=1.0.0",
]

[project.scripts]
riot-pulse = "riot_pulse.cli:main"
